# open-knowledge-studio

./: .gitignore  CLAUDE.md  CONSTITUTION.md  LICENSE  README.md  setup.sh
.claude/: settings.json
.claude/hooks/: pre-compact.sh  session-start.sh  user-prompt-recall.py  user-prompt-recall.sh  validate-wiki-write.sh
.claude/rules/: raw-intake.md  wiki-writing.md
.github/workflows/: publish-oks.yml
.oks/: access.json
_meta/: frontmatter-schema.md  learning-schema.json  raw-evidence-schema.md
cli/: MANIFEST.in  README.md  pyproject.toml  setup.py
cli/knowledge_studio/: cli.py  config.py  distiller.py  health.py  ingest.py  metrics.py  migrate.py  recall.py  store.py  sync.py
cli/knowledge_studio/handlers/: __init__.py  audio.py  base.py  detect.py  image.py  pdf.py  registry.py  repo.py  video.py  web.py
cli/scripts/: bundle_assets.py
cli/tests/: test_distiller.py  test_health.py  test_init.py  test_recall.py
docs/: _config.yml  architecture.md  autonomous.md  browser-capture-and-feishu.md  case-github-practice.md  case-github.md  case-research.md  case-resume.md  cases.md  daily-loop.md  decay-system.md  dreaming-cycle.md  frontmatter-schema.md  index.md  internals.md  memories.md  memory-model.md  metrics.md  okf.md  partitioning.md  philosophy.md  profiles.md  raw-accuracy-improvement-results-20260715.md  raw-materials.md  raw-multimodal-standard.md  raw-plugin-integration-report.md  recall-engine.md  references.md  skills-evolution.md  start-here.md  threads.md  wiki.md
docs/_data/: navigation.yml
docs/_includes/: comments.html  footer_custom.html
drafts/: backend.md  frontend.md  oss.md  research.md
profiles/: INDEX.md  team.md
profiles/goals/: oss-contribution.md  team.md
profiles/projects/: agentuniverse.md  apache-project-contribution.md  autpilot.md  current-microservice-migration.md  current-paper-project.md  current-ui-refactor.md  higress.md  (+3 more)
scripts/: formula_candidates.py  formula_extract_requirements.txt  init-domains.sh  mineru_extract_requirements.txt  multimodal_feedback.py  raw_bundle_adapter.py  raw_extract_requirements.txt  watch_extract_requirements.txt
settings/: decay-config.yaml  handlers.json  input-sources.json  raw-tools.example.json
templates/: anti-pattern.md  concept.md  draft.md  strategy.md
(+73 files in other folders)
