[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "open-knowledge-studio"
version = "0.1.0"
description = "File-based knowledge engineering CLI for Claude Code"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "python-frontmatter>=1",
    "jieba>=0.42",
    "gitpython>=3",
    "pyyaml>=6",
    "pypdf>=4",
]

[project.optional-dependencies]
video = ["openai-whisper"]
image = ["httpx"]
handlers = ["openai-whisper", "httpx"]

[project.scripts]
oks = "knowledge_studio.cli:app"

[tool.setuptools.packages.find]
where = ["."]
