[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "open-knowledge-studio"
version = "0.1.0"
description = "File-based knowledge engineering CLI for Claude Code"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{ name = "open-agent-power" }]
keywords = ["knowledge-base", "memory", "cli", "claude", "agent", "recall"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "python-frontmatter>=1",
    "jieba>=0.42",
    "gitpython>=3",
    "pyyaml>=6",
]

[project.optional-dependencies]
connector = ["oks-connector"]

[project.urls]
Homepage = "https://github.com/open-agent-power/open-knowledge-studio"
Repository = "https://github.com/open-agent-power/open-knowledge-studio"
Documentation = "https://open-agent-power.github.io/open-knowledge-studio/"

[project.scripts]
oks = "knowledge_studio.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["knowledge_studio*"]

[tool.setuptools.package-data]
knowledge_studio = ["_assets/**/*"]
